# Project_1_kursovaya

./: .gitignore  README.md  pyproject.toml
